version/0.18/_sources/api/solver/_autosummary/settings/phase_5.rst.txt
:orphan:

.. _phase_5:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_5.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child_5>`


.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`inlet_vent_child <inlet_vent_child>`       'child_object_type' of inlet_vent.

==========================================   ======================================

